[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = '0.6'
tracing = '0.1'
[dependencies.clap]
version = '3.2'
features = ['derive']

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.controller]
path = '../common'

[dependencies.kube]
version = '*'
default-features = false
features = ['client', 'native-tls']

[dependencies.tracing-subscriber]
version = '0.3'
features = ['env-filter']
