[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = '0.3'
color-eyre = '0.6'
serde_json = '1.0'
async-trait = '0.1'
bytes = '1'
base64 = '0.13'
json-patch = "0.2"
dashmap = "5.0"
tracing = '0.1'
kube-derive = '*'
schemars = '0.8'
tonic = "0.7"
async-stream = "0.3"
flume = "0.10"
rumqttc = "0.12"
regex = "1.5"
once_cell = "1.8"

[dependencies.proto]
path = '../../proto'

[dependencies.axum]
version = '0.5'
features = ['http2']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.kube-runtime]
version = '*'
default-features = false

[dependencies.kube]
version = '0.73.1'
default-features = false
features = [
    'native-tls',
    'derive',
    'client',
]

[dependencies.k8s-openapi]
version = '0.15'
default-features = false
features = [
    'v1_22',
    'schemars',
]

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.tokio-util]
version = '0.7'
features = ['codec']

[dependencies.rand]
version = '0.8'
features = ['small_rng']

[dev-dependencies]
tracing-subscriber = "0.3"
