[package]
name = 'mock'
version = '0.1.1'
edition = '2021'

[dependencies]
color-eyre = '0.6'
serde_json = '1.0'
serde_yaml = '0.8'
toml = '0.5'
tracing = '0.1'

[dependencies.clap]
version = '3.2'
features = ['derive']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.controller]
path = '../common'

[dependencies.tracing-subscriber]
version = '0.3'
features = ['env-filter']
