[[bin]]
name = 'script-crd'
path = 'main.rs'

[package]
name = 'script-crd'
version = '0.1.0'
edition = '2018'

[dependencies]
serde_yaml = '0.8'

[dependencies.controller]
path = '../../controller/common'

[dependencies.kube]
version = '*'
default-features = false

[dependencies.k8s-openapi]
version = '0.15'
default-features = false
features = [
    'v1_22',
    'schemars',
]
