[package]
name = 'executor_ops'
version = '0.1.0'
edition = '2021'

[lib]
name = "executor_ops"
path = "lib.rs"

[dependencies]
deno_core = '0.140'
deno_webidl = '0.58'
deno_url = '0.58'
deno_web = '0.89'
tonic = "0.7"
tracing = '0.1'
time = '0.3'

[dependencies.reqwest]
version = '0.11'
features = ['gzip', 'brotli']

[dependencies.tokio]
version = '1'
features = ['full', 'tracing']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.proto]
path = '../../../proto'
